Passowrd sent # fixed links style # fixed spacing

--- a/asset/css/forgot-pass-email-send.css
+++ b/asset/css/forgot-pass-email-send.css
@@ -5,7 +5,7 @@
    color: #4D4C52;
 }
 .f_pass_email_send_content .top_info p{
-   margin-top: 30px;
+   margin-top: 40px;
    font-size: 14px;
    line-height: 22px;
    color: #817F89;
@@ -18,7 +18,7 @@
 }
 
 .f_pass_email_send_content .social_login_item {
-   margin: 40px 0px;
+   margin: 48px 0px;
    text-align: center;
 }
 .f_pass_email_send_content .social_login_item ul {
@@ -30,7 +30,7 @@
    margin-bottom: 15px;
 }
 .f_pass_email_send_content .social_login_item ul li a{
-   width: 312px;
+   width: 100%;
    height: 48px;
    background: #F4F3F6;
    display: block;
@@ -58,7 +58,7 @@
 
 .f_pass_email_send_content .chnage_email{
    border-bottom: 1px solid #dbdce49c;
-   width: 312px;
+   width: 100%;
    margin: 0 auto;
    padding-bottom: 25px;
 }
@@ -78,7 +78,7 @@
 
 .f_pass_email_send_content .resend_pass_link a{
    display: block;
-   width: 312px;
+   width: 100%;
    margin: 0 auto;
    height: 48px;
    line-height: 48px;
@@ -96,7 +96,7 @@
 }
 
 .f_pass_email_send_content .f_pass_email_send_terms_condition{
-   margin-top: 40px;
+   margin-top: 48px;
 }
 .f_pass_email_send_content .f_pass_email_send_terms_condition p{
    font-size: 12px;
@@ -105,6 +105,7 @@
 }
 .f_pass_email_send_content .f_pass_email_send_terms_condition p a{
    color: #C2C5CD;
+   text-decoration: underline;
 }
 
 .f_pass_email_send_content .f_pass_email_send_terms_condition p a:hover{
@@ -121,13 +122,6 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
 
-   .f_pass_email_send_content .top_info p {
-      margin-top: 16px;
-   }
-
-   .f_pass_email_send_content .social_login_item {
-      margin: 20px 0px;
-   }
    
 }
 
@@ -139,14 +133,14 @@
 }
 
 @media (max-width: 575px) {
-   .f_pass_email_send_content .social_login_item ul li a{
-      width: 95%;
+   .f_pass_email_send_content .top_info p{
+      margin-top: 24px;
    }
-   .f_pass_email_send_content .resend_pass_link a{
-      width: 95%;
+   .f_pass_email_send_content .f_pass_email_send_terms_condition{
+      margin-top: 24px;
    }
-   .f_pass_email_send_content .chnage_email{
-      width: 95%;
+   .f_pass_email_send_content .social_login_item {
+      margin: 24px 0px;
    }
    .f_pass_email_send_content{
       padding: 30px 0px;
